--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -1,11 +1,6 @@
 name: .NET Core
 
-on:
-  pull_request:
-  push:
-    branches:
-      - master
-      - develop
+on: [push, pull_request]
 
 jobs:
   build:
@@ -23,10 +18,10 @@ jobs:
       with:
         dotnet-version: 3.1.101
     - name: Install dependencies
-      run: dotnet tool install --global FlubuCore.GlobalTool --version 5.1.1
+      run: dotnet tool install --global FlubuCore.GlobalTool --version 5.1.2-preview2
     - name: Build
       working-directory: ./src
-      run: flubu compile
+      run: flubu compile.linux
     - name: Test
       working-directory: ./src
-      run: flubu test
+      run: flubu test.linux
